--- a/templates/service.html
+++ b/templates/service.html
@@ -10,8 +10,10 @@
 <section id="list_of_services">
     <div class="section_title2">サービス一覧</div>
     <div class="services_grid">
-        <div class="service_card desktop">デジタルマーケティングコンサルティング</div>
-        <div class="service_card mobile">デジタルマーケティング<br>コンサルティング</div>
+        <div class="service_card">
+            <span class="desktop">デジタルマーケティングコンサルティング</span>
+            <span class="mobile">デジタルマーケティング<br>コンサルティング</span>
+        </div>
         <div class="service_card">ウェブ・アプリ・<br>Blockchain 制作&運用</div>
         <div class="service_card">海外進出</div>
         <div class="service_card">投資マッチング<br>税務監督・最適化サービス</div>
@@ -83,7 +85,7 @@
             <img class="mobile" src="{% static 'img/overseas_mobile.png' %}" alt="">
         </div>
         <div class="section_title2">海外進出</div>
-        <p>
+        <p class="mb_mobile">
             日本から海外進出をご検討されているお客様に対して、広範囲な支援サービスをご提供しています。海外展開したいけどどの国から 始めようか悩んでいるお客様や、国・地域ごとの需要、課税、物価等がいまいち分からないという企業も多くあります。そういった日 本の企業と外国の企業の架け橋として、お客様にとって「信頼できる企業の一員」とした姿勢を心がけています。
         </p>
         <p>
@@ -144,23 +146,23 @@
             <img class="mobile" src="{% static 'img/health_management_mobile.png' %}" alt="">
         </div>
         <div class="section_title2">健康管理</div>
-        <p>次世代ヘルスケア産業へ向けて、公的保険外の予防・健康管理サービスの活用を達成することを目指しています。それを通して生活習慣の改善や受診勧奨等を促すことにより、「重症化した後の治療」から「予防や早期診断・早期治療」に重点化するととも に、地域包括ケアシステムと連携した事業に取り組んでいます。</p>
+        <p class="mb_mobile">次世代ヘルスケア産業へ向けて、公的保険外の予防・健康管理サービスの活用を達成することを目指しています。それを通して生活習慣の改善や受診勧奨等を促すことにより、「重症化した後の治療」から「予防や早期診断・早期治療」に重点化するととも に、地域包括ケアシステムと連携した事業に取り組んでいます。</p>
         <p>
             <ol>
                 <strong>提供しているサービス内容</strong>
-                <li class="p">インフォメーションサービス
+                <li class="p mb_mobile">インフォメーションサービス
                     <ul>
                         <li>- 健康管理・医療に関連する情報・教育の提供。</li>
                     </ul>
                 </li>
-                <li class="p">テクノロジーサービス
+                <li class="p mb_mobile">テクノロジーサービス
                     <ul>
                         <li>- 日々刻々と変化していく社会で、企業が本当に必要としている分野にソフトウェアやテクノロジーを導入しています。</li>
                         <li>- 従業員のマネジメントのツールとして活用できる、柔軟で効率的なIT環境を提供します。</li>
                         <li>- ビッグデータ、モバイル、クラウドなど、新しい潮流が短時間でビジネスに活用される昨今のテクノロジーの分野におい て、CRMやマルチチャネルマーケティング、マスターデータマネジメントなど、ライフサイエンス業界が必要とする IT環境 へのニーズの変化にも対応します。</li>
                     </ul>
                 </li>
-                <li class="p">ソリューションサービス
+                <li class="p mb_mobile">ソリューションサービス
                     <ul>
                         <li>- これまで人類が扱ったことのない最大スケールのヘルスケア分野のデータを基にして、新たな視点からお客様が抱える問題 に様々なソリューションを提供しています。</li>
                         <li>- 企業をとりまく環境変化への対応など、個別ニーズに合わせた、きめ細かいコンサルティングも行っています。</li>
@@ -178,7 +180,7 @@
             <img class="mobile" src="{% static 'img/real_state_development_mobile.png' %}" alt="">
         </div>
         <div class="section_title2">不動産開発</div>
-        <p>不動産の購入や売却、管理方法、活用法などの悩みを抱えるお客様に対し、客観的な立場から要望にお応えします。物件の売買時や賃貸時における相談、土地や建物の有効活用方法の提案、相続などの問題の解決、ありとあらゆる課題に対して精通したプロフェッショナルが客観的な立場からサポートをします。不動産を「売る」「買う」「貸す」「借りる」といった基本的なサービス以外にも、取引時の契約書・重要事項説明書の作成、金融機関との融資交渉といった実務も提供しています。</p>
+        <p class="mb_mobile">不動産の購入や売却、管理方法、活用法などの悩みを抱えるお客様に対し、客観的な立場から要望にお応えします。物件の売買時や賃貸時における相談、土地や建物の有効活用方法の提案、相続などの問題の解決、ありとあらゆる課題に対して精通したプロフェッショナルが客観的な立場からサポートをします。不動産を「売る」「買う」「貸す」「借りる」といった基本的なサービス以外にも、取引時の契約書・重要事項説明書の作成、金融機関との融資交渉といった実務も提供しています。</p>
         <ul>
             <li>- 相続した土地に収益物件を建てたい</li>
             <li>- 空室の多くなった賃貸住宅を何とかしたい </li>
