--- a/static/css/contact_us.css
+++ b/static/css/contact_us.css
@@ -112,6 +112,21 @@ header {
   }
 }
 
+.cover_section {
+  margin-bottom: 6.813vw;
+}
+
+.cover_section .mobile_super_title img {
+  margin-left: 2vw;
+  width: 53vw;
+}
+
+@media (max-width: 767.98px) {
+  .cover_section {
+    margin-bottom: 12vw;
+  }
+}
+
 .title_container {
   left: .3vw;
 }
@@ -129,6 +144,9 @@ article p {
 @media (max-width: 767.98px) {
   article {
     font-size: 3.14vw;
+  }
+  article p {
+    margin-bottom: 9.42vw;
   }
 }
 
@@ -188,19 +206,19 @@ form .form_group textarea {
 }
 
 form .form_group ::-webkit-input-placeholder {
-  color: rgba(0, 0, 0, 0.22);
+  color: rgba(0, 0, 0, 0.4);
 }
 
 form .form_group :-ms-input-placeholder {
-  color: rgba(0, 0, 0, 0.22);
+  color: rgba(0, 0, 0, 0.4);
 }
 
 form .form_group ::-ms-input-placeholder {
-  color: rgba(0, 0, 0, 0.22);
+  color: rgba(0, 0, 0, 0.4);
 }
 
 form .form_group ::placeholder {
-  color: rgba(0, 0, 0, 0.22);
+  color: rgba(0, 0, 0, 0.4);
 }
 
 form button {
@@ -213,32 +231,59 @@ form button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: Noto Serif JP;
   border: none;
   background: #FF981F;
   height: 3.688vw;
-  width: 31.813vw;
+  width: 24.4vw;
+  -webkit-box-shadow: 0px 0.25vw 0.25vw rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0.25vw 0.25vw rgba(0, 0, 0, 0.25);
 }
 
 form button:hover {
-  -webkit-box-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.5);
+  background: rgba(255, 152, 31, 0.75);
   -webkit-transition: .3s ease;
   transition: .3s ease;
 }
 
 @media (max-width: 767.98px) {
   form {
+    padding: 16vw 0 12.5vw;
+    padding-left: 24.5vw;
     font-size: 3.14vw;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  form .form_group {
+    margin-bottom: 8.454vw;
+  }
+  form .form_group label {
+    left: calc(-20.5vw - 1.5vw);
+    width: 20.5vw;
+  }
+  form .form_group label[for="inquiry"] {
+    top: calc( 9.42vw / 2);
   }
   form .form_group input,
   form .form_group textarea {
     width: 64.25vw;
+    -webkit-box-shadow: inset 0px 1vw 1vw rgba(0, 0, 0, 0.09);
+            box-shadow: inset 0px 1vw 1vw rgba(0, 0, 0, 0.09);
+    padding: 3vw;
   }
   form .form_group input {
     height: 9.42vw;
   }
   form .form_group textarea {
     height: 37vw;
+  }
+  form button {
+    margin-top: 3vw;
+    height: 9.184vw;
+    width: 49.848vw;
+    -webkit-box-shadow: 0px 1vw 1vw rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 1vw 1vw rgba(0, 0, 0, 0.25);
   }
 }
 /*# sourceMappingURL=contact_us.css.map */
