--- a/static/css/industries.scss
+++ b/static/css/industries.scss
@@ -1,6 +1,15 @@
 @import './variables';
 @import './cover_section';
 @import './contact_section';
+.cover_section {
+    .mobile_super_title {
+        img {
+            margin-left: 2vw;
+            width: 57vw;
+        }
+    }
+}
+
 .top_message_title {
     font-size: 2.25vw;
     font-family: Noto Serif JP;
@@ -36,8 +45,11 @@ article {
             .title_container {
                 .title_decoration {
                     img {
-                        width: 8.25vw;
+                        width: 8.313vw;
                     }
+                }
+                .section_title2 {
+                    padding: .5vw 0;
                 }
             }
         }
@@ -56,13 +68,20 @@ article {
         padding: 0 $body_padding;
         .industry_grid {
             grid-template-columns: auto;
+            .section_img {
+                img {
+                    margin-top: 12.077vw;
+                }
+            }
             .section_content {
-                padding-left: 7.246vw;
+                padding: 7.729vw 7.246vw 0;
                 .title_container {
                     display: flex;
                     flex-direction: row;
                     align-items: center;
+                    margin-bottom: 3.865vw;
                     .title_decoration {
+                        margin-right: 1.7vw;
                         img {
                             width: 1.208vw;
                         }
