--- a/static/css/service.css
+++ b/static/css/service.css
@@ -360,31 +360,27 @@ header {
     text-shadow: 0 1vw 1vw rgba(0, 0, 0, 0.25);
     font-size: 2.415vw;
   }
-  #list_of_services .services_grid .service_card.desktop {
-    display: none;
-  }
-  #list_of_services .services_grid .service_card.mobile {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  #list_of_services .services_grid .service_card:nth-child(4) {
-    -webkit-box-ordinal-group: 6;
-        -ms-flex-order: 5;
-            order: 5;
+  #list_of_services .services_grid .service_card:nth-child(3) {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
   }
 }
 
 #digital_marketing .dm_grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto;
-      grid-template-columns: auto;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
 }
 
 @media (max-width: 767.98px) {
+  #digital_marketing .dm_grid {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+  }
   #digital_marketing .dm_column {
-    margin-bottom: 1vw;
+    margin-bottom: 2vw;
   }
   #digital_marketing .dm_column:nth-child(1) {
     -webkit-box-ordinal-group: 3;
@@ -409,6 +405,27 @@ header {
   #overseas .section_img img,
   #health_management .section_img img {
     margin-top: 10.87vw;
+  }
+}
+
+@media (max-width: 767.98px) {
+  #overseas .mb_mobile {
+    margin-bottom: 10vw;
+  }
+}
+
+@media (max-width: 767.98px) {
+  #health_management .mb_mobile {
+    margin-bottom: 10vw;
+  }
+}
+
+@media (max-width: 767.98px) {
+  #real_state .section_img img {
+    margin-top: 2vw;
+  }
+  #real_state .mb_mobile {
+    margin-bottom: 10vw;
   }
 }
 /*# sourceMappingURL=service.css.map */
