--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -3,15 +3,21 @@
 <!-- Vision -->
 <section id="vision">
     <div class="section_title2">Vision</div>
-    <div class="vision_body_text">
+    <div class="vision_body_text desktop">
         <p>GMS Groupではお客様のビジネスのサポート、課題解決、コンサルティング等ありとあ<br>らゆる角度からサービスを提供しています。</p>
         <p>また、お客様の課題に注目し、最も適した施策が提案できるよう各部門の専門パート<br>ナーと提携しております。 お客様の課題とご要望（納期・予算・仕様）に合わせて、各パー
             <br>トナーの特徴を把握したGMS Groupのスタッフが最適なチームを構築していきます。</p>
-        <p>さらに、ほぼ全ての案件において、パートナーと協力し合いながら<br>進める体制を取っております。</p>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;さらに、ほぼ全ての案件において、パートナーと協力し合いながら進める体制を取ってお<br>ります。そのため、お客様のプロジェクト進行に必要な多種多様なスキルや経験を持ち合わ<br>せております。</p>
         <p>ご要望を叶えるだけでなく、問題解決にも親身になって取り組みます。</p>
         <p>共に新しいビジネスチャンスと価値を生み出す貢献性の高い企業を目指しています。</p>
         <p>是非安心してご相談ください。</p>
-
+    </div>
+    <div class="vision_body_text mobile">
+        <p>GMS Groupではお客様のビジネスのサポート、課題解決、コンサルティング等ありとあらゆる角度からサービスを提供しています。</p>
+        <p>また、お客様の課題に注目し、最も適した施策が提案できるよう各部門の専門パートナーと提携しております。 お客様の課題とご要望（納期・予算・仕様）に合わせて、各パー トナーの特徴を把握したGMS Groupのスタッフが最適なチームを構築していきます。</p>
+        <p>さらに、ほぼ全ての案件において、パートナーと協力し合いながら進める体制を取っております。そのため、お客様のプロジェクト進行に必要な多種多様なスキルや経験を持ち合わせております。</p>
+        <p>ご要望を叶えるだけでなく、問題解決にも親身になって取り組みます。共に新しいビジネスチャンスと価値を生み出す貢献性の高い企業を目指しています。</p>
+        <p>是非安心してご相談ください。</p>
     </div>
 </section>
 <!-- !Vision -->
@@ -33,7 +39,7 @@
             <strong>電話番号</strong><br>03-6555-2588
         </p>
         <p>
-            <strong>電話受付時間</strong>9:00〜18:00（月曜日〜金曜日）<br>※ 土曜・日曜は休み
+            <strong>電話受付時間</strong><br>9:00〜18:00（月曜日〜金曜日）<br>※ 土曜・日曜は休み
         </p>
         <p>
             <strong>公開メールアドレス</strong><br>info@gms.jp
