--- a/static/css/about_us.scss
+++ b/static/css/about_us.scss
@@ -1,7 +1,12 @@
-@import './variables';
-@import './cover_section';
-@import './contact_section';
+@import "./variables";
+@import "./cover_section";
+@import "./contact_section";
 .cover_section {
+    .title_container {
+        .page_title {
+            right: -9.5vw;
+        }
+    }
     @media #{$query_tablet} {
         .mobile_super_title {
             left: unset;
@@ -60,7 +65,7 @@
         line-height: 1.46;
         font-family: Noto Sans JP;
         p {
-            margin-bottom: .5vw;
+            margin-bottom: 0.5vw;
         }
     }
     @media #{$query_tablet} {
@@ -71,7 +76,7 @@
             font-size: 3.14vw;
             padding: 0 5.9vw;
             p {
-                margin-bottom: .5vw;
+                margin-bottom: 0.5vw;
             }
         }
     }
