--- a/static/css/contact_us.scss
+++ b/static/css/contact_us.scss
@@ -1,5 +1,5 @@
-@import './variables';
-@import './cover_section';
+@import "./variables";
+@import "./cover_section";
 .cover_section {
     margin-bottom: 6.813vw;
     .mobile_super_title {
@@ -8,13 +8,15 @@
             width: 53vw;
         }
     }
+    .title_container {
+        left: 0.3vw;
+        .page_title {
+            right: -11vw;
+        }
+    }
     @media #{$query_tablet} {
         margin-bottom: 12vw;
     }
-}
-
-.title_container {
-    left: .3vw;
 }
 
 article {
@@ -53,14 +55,14 @@ form {
             text-align: right;
             transform: translateY(-50%);
             &[for="inquiry"] {
-                top: calc( #{$input_height} / 2)
+                top: calc(#{$input_height} / 2);
             }
         }
         input,
         textarea {
             background: rgba($input_background, 0.47);
-            border: .063vw solid rgba($black, 0.17);
-            box-shadow: inset 0px .25vw .25vw rgba($black, 0.09);
+            border: 0.063vw solid rgba($black, 0.17);
+            box-shadow: inset 0px 0.25vw 0.25vw rgba($black, 0.09);
             padding: 2.25vw;
             width: 54.75vw;
         }
@@ -84,10 +86,10 @@ form {
         background: $primary;
         height: 3.688vw;
         width: 24.4vw;
-        box-shadow: 0px .25vw .25vw rgba($black, 0.25);
+        box-shadow: 0px 0.25vw 0.25vw rgba($black, 0.25);
         &:hover {
             background: rgba($primary, 0.75);
-            transition: .3s ease;
+            transition: 0.3s ease;
         }
     }
     @media #{$query_tablet} {
@@ -103,7 +105,7 @@ form {
                 left: calc(-#{$label_width} - 1.5vw);
                 width: $label_width;
                 &[for="inquiry"] {
-                    top: calc( #{$input_height} / 2)
+                    top: calc(#{$input_height} / 2);
                 }
             }
             input,
