--- a/templates/index.html
+++ b/templates/index.html
@@ -155,10 +155,10 @@
     <div class="section_title">Our Partner</div>
     <div class="body_text">パートナー</div>
     <div class="ourpartner_cards">
-        <div class="partner_card card_shadow"><img src="{%static 'img/partner1.png'%}" alt=""></div>
-        <div class="partner_card card_shadow"><img src="{%static 'img/partner2.png'%}" alt=""></div>
-        <div class="partner_card card_shadow"><img src="{%static 'img/partner3.png'%}" alt=""></div>
-        <div class="partner_card card_shadow"><img src="{%static 'img/partner4.png'%}" alt=""></div>
+        <a href="https://minnadenoukasan.com/"><div class="partner_card card_shadow"><img src="{%static 'img/new_partner.jpeg'%}" alt=""></div></a>
+        <a href="https://www.regi.store/"><div class="partner_card card_shadow"><img src="{%static 'img/partner2.png'%}" alt=""></div></a>
+        <a href="https://happymama.jp/"><div class="partner_card card_shadow"><img src="{%static 'img/partner3.png'%}" alt=""></div></a>
+        <a href="http://www.drsfood.com/"><div class="partner_card card_shadow"><img src="{%static 'img/partner4.png'%}" alt=""></div></a>
     </div>
 </section>
 <!-- !Our Partner -->
@@ -171,15 +171,15 @@
         <div class="body_text">
             <p class="sub_title">私たちの強み・理念</p>
             <p class="desktop">
-                GMS Groupでは、お客様の課題に注目し最も適した施策が提案できるよう、<br> 各部門の専門パートナーと提携しております。
-                <br> お客様の課題とご要望(納期・予算・仕様)に合わせて、各パートナーの特徴を把握したGMSのスタッフが最適な
+                K-Gen Groupでは、お客様の課題に注目し最も適した施策が提案できるよう、<br> 各部門の専門パートナーと提携しております。
+                <br> お客様の課題とご要望(納期・予算・仕様)に合わせて、各パートナーの特徴を把握したK-Genのスタッフが最適な
                 <br> チームを構築し ていきます。また、ほぼ全ての案件において、外部のパートナーと協力し合いながら進める体制を<br> 取っております。そのため、お客様のプロジェクト進行に必要な多種多様なスキルや経験を持ち合わせております。
                 <br> 是非安心してご相談ください。
             </p>
-            <p class="mobile">GMS Groupでは、お客様の課題に注目し最も適した施策が提案できるよう、</p>
+            <p class="mobile">K-Gen Groupでは、お客様の課題に注目し最も適した施策が提案できるよう、</p>
             <p class="mobile">各部門の専門パートナーと提携しております。</p>
             <p class="mobile">お客様の課題とご要望(納期・予算・仕様)に合わせて、各パートナーの特徴を把握した</p>
-            <p class="mobile">GMSのスタッフが最適なチームを構築し ていきます。</p>
+            <p class="mobile">K-Genのスタッフが最適なチームを構築し ていきます。</p>
             <p class="mobile">また、ほぼ全ての案件において、パートナーと協力し合いながら進める体制を取っております。そのため、お客様のプロジェクト進行に必要な多種多様なスキルや経験を持ち合わせております。 </p>
             <p class="mobile">是非安心してご相談ください。</p>
         </div>
