--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %} - GMS Group</title>
+    <title>{% block title %}{% endblock %} - K-Gen Group</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static '/css/master.css' %}"> {% block styles %}{% endblock %}
 </head>
@@ -12,12 +12,12 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-            <div class="search">
+            <div class="search invisible">
                 <img src="{% static 'img/search.svg' %}" alt="">
             </div>
             <a class="logo" href="{% url 'home' %}">
-                <div class="acronym">GMS Group</div>
-                <div class="full_name">Global Management Support</div>
+                <div class="acronym">K-Gen Group</div>
+                <div class="full_name d-none">Global Management Support</div>
             </a>
             <a class="navbar_toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <img src="{% static 'img/dehaze.svg' %}" alt="Menu">
@@ -48,7 +48,7 @@
                             <div class="japanese">お問い合わせ</div>
                         </a>
                     </li>
-                    <li class="language">
+                    <li class="language hide_with_placeholder">
                         <div class="language_item en">
                             <a href="">EN</a>
                         </div>
@@ -67,7 +67,7 @@
     <footer>
         <div class="footer_col_left">
             <a href="{% url 'home' %}">
-                <div class="brand_name">GMS Group</div>
+                <div class="brand_name">K-Gen Group</div>
             </a>
             <a href="{% url 'service' %}">
                 <div class="footer_left_item">サービス</div>
@@ -87,13 +87,13 @@
                 <strong>所在地</strong><br>東京都世田谷区千歳台4-6-5
             </div>
             <div class="footer_right_item">
-                <strong>電話番号</strong><br>03-6555-2588
+                <strong>電話番号</strong><br>03-6555-3580
             </div>
             <div class="footer_right_item">
                 <strong>電話受付時間</strong><br>9:00〜18:00（月曜日〜金曜日）<br>※ 土曜・日曜は休み
             </div>
             <div class="footer_right_item">
-                <strong>公開メールアドレス</strong><br>info@gms.jp<br>
+                <strong>公開メールアドレス</strong><br>info@kgen.group<br>
             </div>
         </div>
     </footer>
