--- a/templates/service.html
+++ b/templates/service.html
@@ -114,7 +114,7 @@
             <img class="mobile" src="{% static 'img/investment_mobile.png'%}" alt="">
         </div>
         <div class="section_title2">投資マッチング</div>
-        <p>お客様が事業拡大のため必要としている資金を投資してくれる投資家とお引き合わせするサービスを提供しています。GMS Groupの強みは、 世界中にネットワークがあることです。投資を必要としている企業が多い中、それを支援したいと言ってくれる投資家と出会うのは容易いことではありません。多くの時間、労働とネットワークを要します。特に大きな可能性を秘めている個人投資家は探してもそう簡単に出会えるものではありません。そんな創造力と行動力のある起業家と、そのビジョンに共感する投資家が、大きなビジネスチャンスを逃さないように最適な出会いをサポートしています。</p>
+        <p>お客様が事業拡大のため必要としている資金を投資してくれる投資家とお引き合わせするサービスを提供しています。K-Gen Groupの強みは、 世界中にネットワークがあることです。投資を必要としている企業が多い中、それを支援したいと言ってくれる投資家と出会うのは容易いことではありません。多くの時間、労働とネットワークを要します。特に大きな可能性を秘めている個人投資家は探してもそう簡単に出会えるものではありません。そんな創造力と行動力のある起業家と、そのビジョンに共感する投資家が、大きなビジネスチャンスを逃さないように最適な出会いをサポートしています。</p>
         <p>
             <ul>
                 <strong>提供しているサービス内容</strong>
