--- a/templates/index.html
+++ b/templates/index.html
@@ -155,10 +155,10 @@
     <div class="section_title">Our Partner</div>
     <div class="body_text">パートナー</div>
     <div class="ourpartner_cards">
-        <a href="https://minnadenoukasan.com/"><div class="partner_card card_shadow"><img src="{%static 'img/new_partner.jpeg'%}" alt=""></div></a>
-        <a href="https://www.regi.store/"><div class="partner_card card_shadow"><img src="{%static 'img/partner2.png'%}" alt=""></div></a>
-        <a href="https://happymama.jp/"><div class="partner_card card_shadow"><img src="{%static 'img/partner3.png'%}" alt=""></div></a>
-        <a href="http://www.drsfood.com/"><div class="partner_card card_shadow"><img src="{%static 'img/partner4.png'%}" alt=""></div></a>
+        <a href="https://minnadenoukasan.com/" target="_blank"><div class="partner_card card_shadow"><img src="{%static 'img/new_partner.jpeg'%}" alt=""></div></a>
+        <a href="https://www.regi.store/" target="_blank"><div class="partner_card card_shadow"><img src="{%static 'img/partner2.png'%}" alt=""></div></a>
+        <a href="https://happymama.jp/" target="_blank"><div class="partner_card card_shadow"><img src="{%static 'img/partner3.png'%}" alt=""></div></a>
+        <a href="http://www.drsfood.com/" target="_blank"><div class="partner_card card_shadow"><img src="{%static 'img/partner4.png'%}" alt=""></div></a>
     </div>
 </section>
 <!-- !Our Partner -->
